--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
       <div class="footer">
         <p>Follow me on:</p>
         <ul class="inl">
-          <li><a href="https://github.com/sanketh95"><img src="images/github.jpg" class="icon"></a></li>
-          <li><a href="https://www.facebook.com/sanketh.mopuru"><img src="images/fb.jpg" class="icon"></a></li>
-          <li><a href="https://plus.google.com/105025502890908775934/posts/p/pub"><img src="images/gp.jpg" class="icon"></a></li>
+          <li><a href="https://github.com/sanketh95"><img src="images/github.jpg" alt="github" class="icon"></a></li>
+          <li><a href="https://www.facebook.com/sanketh.mopuru"><img src="images/fb.jpg" alt="fb" class="icon"></a></li>
+          <li><a href="https://plus.google.com/105025502890908775934/posts/p/pub"><img src="images/gp.jpg" alt="google+" class="icon"></a></li>
         </ul>
       </div>
 
