--- a/contactme.html
+++ b/contactme.html
@@ -97,13 +97,6 @@
         max-height: 30px;
         max-height: 30px;
       }
-
-      .work >a{
-        text-decoration: underline;
-      }
-      .work > p > a {
-        text-decoration: underline;
-      }
     </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -120,10 +113,10 @@
             <div class="container">
               <ul class="nav">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="#">My Works</a></li>
+                <li><a href="myworks.html">My Works</a></li>
                 <li><a href="#">Things I Do</a></li>
                 <li><a href="https://docs.google.com/document/d/1GIcJLnE6Wdd5DE8R7-_LqaT2fpLs5G5ul1p4VZKfu4A/pub">My Resume</a></li>
-                <li><a href="contactme.html">Contact Me</a></li>
+                <li class="active"><a href="#">Contact Me</a></li>
               </ul>
             </div>
           </div>
@@ -131,65 +124,13 @@
       </div>
 
       <!-- Jumbotron -->
-      <div class="main">
-        <h1>My Works</h1>
-        <div class="work">
-          <h3>PyFTP</h3>
-          <p>This is a simple FTP client written in Python using the <strong>ftplib</strong> module. It has a cool recursive search functionality.<br>
-            <a href="https://github.com/sanketh95/PyFTP/blob/master/README.md">Installaton and Usage Instructions</a> <a href="https://github.com/sanketh95/PyFTP">Source Code</a>.
-          </p>
-        </div>
-        <div class="work">
-          <h3>JQuery Form Helpers and Validators</h3>
-          <p>
-            This is a simple jquery plugin to validate forms.<br>
-            It has cool features like:
-            <ul>
-              <li>Allowing only numbers for input fields for mobile numbers, credit card numbers etc.</li>
-              <li>It has individual helpers and validators for mobile numbers of different countries so say for India it allows only ten digit numbers.</li>
-              <li>Just add an attribute <em>req</em> to any mandatory field and it automatically verifies if the field has been filled on submitting the form.</li>
-            </ul>
-            and much more ... <br>
-            <a href="https://github.com/sanketh95/jquery-form-helper/blob/master/README.md">
-              Installation and Usage instructions</a>
-            <a href="https://github.com/sanketh95/jquery-form-helper">Source Code</a>
-          </p>
-        </div>
-        <div class="work">
-          <h3>Intranet Entertainment Portal</h3>
-          <p>
-            This is an entertainment portal for IITG Intranet. It was a team project, the team containing 20 members.<br>  It includes the following modules:
-            <ul>
-              <li><strong>Ebooks Module</strong>: Users can upload and download ebooks and documents.</li>
-              <li><strong>Music Module</strong>: Users can upload, listen to and download music.</li>
-              <li><strong>Video Module</strong>: Users can upload, watch, share videos.</li>
-              <li><strong>Gallery</strong>: Users can upload pictures, create albums and watch them later.</li>
-              <li><strong>Code Judge</strong>: Users can solve interesting programming problems while competing with others.</li>
-              <li><strong>App and Game Store:</strong> Users can upload games and apps they have developed and any other user can download and use them.</li>
-            </ul>
-            If you wanna take a peek at the source code, it is <a href="https://github.com/sanketh95/iep">here</a>
-          </p>
-        </div>
-        <div class="work">
-          <h3>HoteLGuru</h3>
-          <p>
-            It is a software that helps the hotel management by easing the process of booking of rooms. It has features like:
-            <ul>
-              <li>Two-level hierarchy for user and superuser</li>
-              <li>Setting type of suites and their corresponding prices.</li>
-              <li>Managing employees who work in the hotel i.e, add a new employee, make an employee inactive etc.</li>
-              <li>Booking rooms for customers and a check-out functionality (Obviously !) .</li>
-            </ul>
-          </p>
-        </div>
-        <div class="work">
-          <h3>Assembler-Linker-Loader</h3>
-          <p>
-            This project aims in developing a system that takes in high-level assembly language files, links them relative to memory address 0 , loads them to a memory location, and finally maps them to the assembly language accepted by 8085 simulator. This is developed in Python again. ( I never get tired of Python.:) ). <br>
-            You can find the source code <a href="https://github.com/sanketh95/assembler-linker-loader">here</a>
-          </p>
-        </div>
+      <div class="jumbotron">
+        <h2 class="custom-heading">Contact Me</h2>
+        <p class="lead">
+          If you are interested in knowing more about any of my projects you can reach me at <strong>sankethmopuru95@gmail.com</strong> or message me on <strong><a href="https://www.facebook.com/sanketh.mopuru">facebook</a></strong>
+        </p>
       </div>
+
 
       <!-- Example row of columns -->
       <hr>
