Contact me updated

--- a/contactme.html
+++ b/contactme.html
@@ -115,7 +115,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="myworks.html">My Works</a></li>
                 <li><a href="#">Things I Do</a></li>
-                <li><a href="https://docs.google.com/document/d/1GIcJLnE6Wdd5DE8R7-_LqaT2fpLs5G5ul1p4VZKfu4A/pub">My Resume</a></li>
+                <li><a target="_blank" href="https://docs.google.com/document/d/1GIcJLnE6Wdd5DE8R7-_LqaT2fpLs5G5ul1p4VZKfu4A/pub">My Resume</a></li>
                 <li class="active"><a href="#">Contact Me</a></li>
               </ul>
             </div>
@@ -127,7 +127,9 @@
       <div class="jumbotron">
         <h2 class="custom-heading">Contact Me</h2>
         <p class="lead">
-          If you are interested in knowing more about any of my projects you can reach me at <strong>sankethmopuru95@gmail.com</strong> or message me on <strong><a href="https://www.facebook.com/sanketh.mopuru">facebook</a></strong>
+          If you are interested in knowing more about any of my projects you can reach me at <strong>
+          <a href="mailto:sankethmopuru95@gmail.com" target="_top">
+sankethmopuru95@gmail.com</a></strong> or message me on <strong><a href="https://www.facebook.com/sanketh.mopuru">facebook</a></strong>
         </p>
       </div>
 
