--- a/myworks.html
+++ b/myworks.html
@@ -122,7 +122,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="#">My Works</a></li>
                 <li><a href="#">Things I Do</a></li>
-                <li><a href="https://docs.google.com/document/d/1GIcJLnE6Wdd5DE8R7-_LqaT2fpLs5G5ul1p4VZKfu4A/pub">My Resume</a></li>
+                <li><a target="_blank" href="https://docs.google.com/document/d/1GIcJLnE6Wdd5DE8R7-_LqaT2fpLs5G5ul1p4VZKfu4A/pub">My Resume</a></li>
                 <li><a href="contactme.html">Contact Me</a></li>
               </ul>
             </div>
