Skills page added

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <ul class="nav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="myworks.html">My Works</a></li>
-                <li><a href="#">Things I Do</a></li>
+                <li><a href="skills.html">My Skills</a></li>
                 <li><a target="_blank" href="https://docs.google.com/document/d/1GIcJLnE6Wdd5DE8R7-_LqaT2fpLs5G5ul1p4VZKfu4A/pub">My Resume</a></li>
                 <li><a href="contactme.html">Contact Me</a></li>
               </ul>
