--- a/skills.html
+++ b/skills.html
@@ -134,6 +134,8 @@
         <li>visual Basic</li>
         <li>Unix Shell Scripting</li>
         <li>Visual Basic</li>
+        <li>PHP</li>
+        <li><strong>Web Technologies</strong>:JavaScript,JQuery,HTML,CSS</li>
       </ul>
 
       <!-- Example row of columns -->
