--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="jumbotron">
         <h2 class="custom-heading">About Me</h2>
         <p class="lead">
-          Hi, I'm Sanketh Mopuru, studying B.Tech in Computer Science and Engineering at <strong><a href="http://iitg.ac.in">IIT Guwahati</a></strong>. I love coding and am a serial coder. When I'm not coding, I usually google for interesting and breathtaking advancements in Science and Technology and hang out with my friends. My interests in Computer Science lie in <strong><a href="http://en.wikipedia.org/wiki/Computer_network">Networking</a></strong> and <strong><a href="http://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a></strong>.</p>
+          Hi, I'm Sanketh Mopuru, studying B.Tech in Computer Science and Engineering at <strong><a href="http://iitg.ac.in">IIT Guwahati</a></strong>. I love coding and am a serial coder. When I'm not coding, I usually search for interesting advancements in Science and Technology and hang out with my friends. My interests in Computer Science lie in <strong><a href="http://en.wikipedia.org/wiki/Computer_network">Networking</a></strong> and <strong><a href="http://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a></strong>.</p>
           <p class="lead">
            You can find my works <a href="myworks.html">here</a>. If you are fellow coder and interested in contributing to some cool projects check me out on <strong><a href="https://github.com/sanketh95">GitHub</a></strong></p>. 
       </div>
