Minor changes in My works

--- a/myworks.html
+++ b/myworks.html
@@ -135,7 +135,7 @@
         <h1>My Works</h1>
         <div class="work">
           <h3>PyFTP</h3>
-          <p>This is a simple FTP client written in Python using the <strong>ftplib</strong> module. It has a cool recursive search functionality.<br>
+          <p>This is a simple commandline FTP client written in Python using the <strong>ftplib</strong> module. It has a cool recursive search functionality.<br>
             <a href="https://github.com/sanketh95/PyFTP/blob/master/README.md">Installaton and Usage Instructions</a> <a href="https://github.com/sanketh95/PyFTP">Source Code</a>.
           </p>
         </div>
