--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
+      <img src="images/m.jpg" style="max-width:300px;max-height:400px">
         <h2 class="custom-heading">About Me</h2>
         <p class="lead">
           Hi, I'm Sanketh Mopuru, studying B.Tech in Computer Science and Engineering at <strong><a href="http://iitg.ac.in">IIT Guwahati</a></strong>. I love coding and am a serial coder. When I'm not coding, I usually catch up on the interesting advancements in Science and Technology and hang out with my friends. My interests in Computer Science lie in <strong><a href="http://en.wikipedia.org/wiki/Computer_network">Networking</a></strong> and <strong><a href="http://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a></strong>.</p>
