--- a/myworks.html
+++ b/myworks.html
@@ -190,6 +190,23 @@
           </p>
         </div>
       </div>
+      <div class="work">
+          <h3>Coursera Offline</h3>
+          <p>
+            This is a script to download course videos and subtitles from <a href="https://www.coursera.org">Coursera</a> in one go without having to press several links. <br>
+            It has features like:
+
+            <ul>
+                <li><strong>Week Structure: </strong> The script takes care of organizing the videos into separate folders for separate weeks.</li>
+                <li><strong>Synching: </strong> So new videos have been added into the course. Don't worry the script takes care of synching with Coursera. All you need to do is run a simple command.</li>
+                <li><strong>Ordering the videos: </strong> So you've downloaded all the videos. Now you might be wondering the order in which the videos are meant to be watched. Don't worry ! The script renames the videos so that the names of videos that come first are lexicographically smaller than those that come later.</li>
+                <li><strong>VLC Compatibility: </strong> The script downloads the subtitle for each video into a <em>Subs</em> folder so that vlc automatically loads the subs while playing the video.</li>
+                <li><strong>Lightning fast download: </strong> The script downloads the videos parallely there by making the overall download pretty fast.</li>
+            </ul>
+            You can get the source code from <a href="https://github.com/sanketh95/coursera-offline">GitHub</a> or 
+            <a href="https://pypi.python.org/pypi/coursera_offline/">PyPi</a>. You can find the installation instructions <a href="https://github.com/sanketh95/coursera-offline#installation">here</a>.
+          </p>
+        </div>
 
       <!-- Example row of columns -->
       <hr>
