FB Share button added

--- a/myworks.html
+++ b/myworks.html
@@ -148,6 +148,7 @@
           <p>This is a simple commandline FTP client written in Python using the <strong>ftplib</strong> module. It has a cool recursive search functionality.<br>
             <a href="https://github.com/sanketh95/PyFTP/blob/master/README.md">Installaton and Usage Instructions</a> <a href="https://github.com/sanketh95/PyFTP">Source Code</a>.
           </p>
+          <div class="fb-share-button" data-href="http://sanketh95.github.io/works.html#pyftp"></div>
         </div>
         <div class="work">
           <a name="jqfh"></a>
@@ -164,8 +165,9 @@
             <a href="https://github.com/sanketh95/jquery-form-helper/blob/master/README.md">
               Installation and Usage instructions</a>
             <a href="https://github.com/sanketh95/jquery-form-helper">Source Code</a><br>
-            <div class="fb-share-button" data-href="http://sanketh.github.io/works.html#jqfh"></div>
+            
           </p>
+          <div class="fb-share-button" data-href="http://sanketh95.github.io/works.html#jqfh"></div>
         </div>
         <div class="work">
         <a name="iep"></a>
@@ -182,6 +184,7 @@
             </ul>
             If you wanna take a peek at the source code, it is <a href="https://github.com/sanketh95/iep">here</a>
           </p>
+          <div class="fb-share-button" data-href="http://sanketh95.github.io/works.html#iep"></div>
         </div>
         <div class="work">
           <a name="hg"></a>
@@ -195,6 +198,7 @@
               <li>Booking rooms for customers and a check-out functionality (Obviously !) .</li>
             </ul>
           </p>
+          <div class="fb-share-button" data-href="http://sanketh95.github.io/works.html#hg"></div>
         </div>
         <div class="work">
         <a name="ass-link-load"></a>
@@ -203,6 +207,7 @@
             This project aims in developing a system that takes in high-level assembly language files, links them relative to memory address 0 , loads them to a memory location, and finally maps them to the assembly language accepted by 8085 simulator. This is developed in Python again. ( I never get tired of Python.:) ). <br>
             You can find the source code <a href="https://github.com/sanketh95/assembler-linker-loader">here</a>
           </p>
+          <div class="fb-share-button" data-href="http://sanketh95.github.io/works.html#ass-link-load"></div>
         </div>
       </div>
       <div class="work">
@@ -222,6 +227,7 @@
             You can get the source code from <a href="https://github.com/sanketh95/coursera-offline">GitHub</a> or 
             <a href="https://pypi.python.org/pypi/coursera_offline/">PyPi</a>. You can find the installation instructions <a href="https://github.com/sanketh95/coursera-offline#installation">here</a>.
           </p>
+          <div class="fb-share-button" data-href="http://sanketh95.github.io/works.html#coursera-offline"></div>
         </div>
 
       <!-- Example row of columns -->
