My works updated

--- a/myworks.html
+++ b/myworks.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sanketh Mopuru</title>
+    <title>Sanketh Mopuru | Works</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a responsive web template built with twitter bootstrap, using LESS CSS and managed through github">
-    <meta name="author" content="twittstrap.com">
+    <meta name="description" content="Works of Sanketh Mopuru">
+    <meta name="author" content="Sanketh Mopuru">
+    <meta name="works" content="">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -134,15 +135,13 @@
       <div class="main">
         <h1>My Works</h1>
         <div class="work">
-          <a name="pyftp"></a>
-          <a href="#pyftp"><h3>PyFTP</h3></a>
+          <h3>PyFTP</h3>
           <p>This is a simple commandline FTP client written in Python using the <strong>ftplib</strong> module. It has a cool recursive search functionality.<br>
             <a href="https://github.com/sanketh95/PyFTP/blob/master/README.md">Installaton and Usage Instructions</a> <a href="https://github.com/sanketh95/PyFTP">Source Code</a>.
           </p>
         </div>
         <div class="work">
-          <a name="jqfh"></a>
-          <a href="#jqfh"><h3>JQuery Form Helpers and Validators</h3></a>
+          <h3>JQuery Form Helpers and Validators</h3>
           <p>
             This is a simple jquery plugin to validate forms.<br>
             It has cool features like:
@@ -159,8 +158,7 @@
           </p>
         </div>
         <div class="work">
-        <a name="iep"></a>
-          <a href="#iep"><h3>Intranet Entertainment Portal</h3></a>
+        <h3>Intranet Entertainment Portal</h3>
           <p>
             This is an entertainment portal for IITG Intranet. It was a team project, the team containing 20 members.<br>  It includes the following modules:
             <ul>
@@ -175,8 +173,7 @@
           </p>
         </div>
         <div class="work">
-          <a name="hg"></a>
-          <a href="#hg"><h3>HoteLGuru</h3></a>
+          <h3>HoteLGuru</h3>
           <p>
             It is a software that helps the hotel management by easing the process of booking of rooms. It has features like:
             <ul>
@@ -188,8 +185,7 @@
           </p>
         </div>
         <div class="work">
-        <a name="ass-link-load"></a>
-          <a href="#ass-link-load"><h3>Assembler-Linker-Loader</h3></a>
+        <h3>Assembler-Linker-Loader</h3>
           <p>
             This project aims in developing a system that takes in high-level assembly language files, links them relative to memory address 0 , loads them to a memory location, and finally maps them to the assembly language accepted by 8085 simulator. This is developed in Python again. ( I never get tired of Python.:) ). <br>
             You can find the source code <a href="https://github.com/sanketh95/assembler-linker-loader">here</a>
@@ -197,8 +193,7 @@
         </div>
       </div>
       <div class="work">
-          <a name="coursera-offline"></a>
-          <a href="#coursera-offline"><h3>Coursera Offline</h3></a>
+          <h3>Coursera Offline</h3>
           <p>
             This is a script to download course videos and subtitles from <a href="https://www.coursera.org">Coursera</a> in one go without having to press several links. <br>
             It has features like:
@@ -209,13 +204,51 @@
                 <li><strong>Ordering the videos: </strong> So you've downloaded all the videos. Now you might be wondering the order in which the videos are meant to be watched. Don't worry ! The script renames the videos so that the names of videos that come first are lexicographically smaller than those that come later.</li>
                 <li><strong>VLC Compatibility: </strong> The script downloads the subtitle for each video into a <em>Subs</em> folder so that vlc automatically loads the subs while playing the video.</li>
                 <li><strong>Lightning fast download: </strong> The script downloads the videos parallely there by making the overall download pretty fast.</li>
+                <li><strong>Session Cookies: </strong> The script saves the session cookies in a cookie.txt so that the user need not provide login credentials again.
+                </li>
             </ul>
             You can get the source code from <a href="https://github.com/sanketh95/coursera-offline">GitHub</a> or 
             <a href="https://pypi.python.org/pypi/coursera_offline/">PyPi</a>. You can find the installation instructions <a href="https://github.com/sanketh95/coursera-offline#installation">here</a>.
           </p>
         </div>
 
+        <div class="work">
+          <h3>Hackenbush</h3>
+
+          <p>
+            Developed <a href="http://en.wikipedia.org/wiki/Hackenbush">Hackenbush</a> game in Haskell. <br>
+            You can find the source code <a href="https://github.com/sanketh95/hackenbush">here</a>.
+          </p>
+        </div>
+
+        <div class="work">
+          <h3>TFTP Client</h3>
+
+          <p>
+            Developed a TFTP client using socket programming in C. <br>
+            Find the source code <a href="https://github.com.sanketh95/TFTPClient"></a>
+          </p>
+        </div>
+
+        <div class="work"> 
+        <h3>FTP Client and Server</h3>
+
+          <p>
+            Developed a minimal FTP client and server using socket apis in C++. <br>
+            It supports the following commands <br>
+            <ul>
+              <li><strong>ls</strong> : List the files and folders in the PWD of server</li>
+              <li><strong>!ls</strong> : List the files and folders in the PWD of client</li>
+              <li><strong>cd</strong> : Change PWD of server.</li>
+              <li><strong>!cd</strong> : Change PWD of client.</li>
+              <li><strong>get</strong> : Download a file from server.</li>
+              <li><strong>put</strong> : Upload a file to server.</li>
+            </ul>
+          </p>
+          You can find the source code <a href="https://github.com/sanketh95/FTP--Client-Server">here</a>.
+        </div>
       <!-- Example row of columns -->
+      
       <hr>
 
       <div class="footer">
@@ -226,6 +259,8 @@
           <li><a href="https://plus.google.com/105025502890908775934/posts/p/pub"><img src="images/gp.jpg" alt="google+" class="icon"></a></li>
         </ul>
       </div>
+
+      
 
     </div> <!-- /container -->
 
