--- a/contactme.html
+++ b/contactme.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sanketh Mopuru</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a responsive web template built with twitter bootstrap, using LESS CSS and managed through github">
-    <meta name="author" content="twittstrap.com">
+    <title>Sanketh Mopuru | Contact</title>
+    <meta name="description" content="Contact Sanketh Mopuru">
+    <meta name="author" content="Sanketh Mopuru">
+    <meta name="tags" content="contact sanketh mopuru">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -128,8 +128,8 @@
         <h2 class="custom-heading">Contact Me</h2>
         <p class="lead">
           If you are interested in knowing more about any of my projects you can reach me at <strong>
-          <a href="mailto:sankethmopuru95@gmail.com" target="_top">
-sankethmopuru95@gmail.com</a></strong> or message me on <strong><a href="https://www.facebook.com/sanketh.mopuru">facebook</a></strong>
+          <a href="mailto:sanketh.mopuru@gmail.com" target="_top">
+sanketh.mopuru@gmail.com</a></strong> or message me on <strong><a href="https://www.facebook.com/sanketh.mopuru">facebook</a></strong>
         </p>
       </div>
 
