--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sanketh Mopuru</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a responsive web template built with twitter bootstrap, using LESS CSS and managed through github">
-    <meta name="author" content="twittstrap.com">
+    <title>Sanketh Mopuru | About</title>
+    <meta name="description" content="About Sanketh Mopuru">
+    <meta name="author" content="Sanketh Mopuru">
+    <meta name="tags" content="sanketh mopuru about">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
