--- a/myworks.html
+++ b/myworks.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Sanketh Mopuru | Works</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Works of Sanketh Mopuru">
     <meta name="author" content="Sanketh Mopuru">
-    <meta name="works" content="">
+    <meta name="tags" content="pyftp coursera offline ftp client server tftp jquery">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
