--- a/skills.html
+++ b/skills.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sanketh Mopuru</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a responsive web template built with twitter bootstrap, using LESS CSS and managed through github">
-    <meta name="author" content="twittstrap.com">
+    <title>Sanketh Mopuru | Skills</title>
+    <meta name="description" content="skills of sanketh mopuru">
+    <meta name="author" content="Sanketh Mopuru">
+    <meta name="tags" content="jquery python css haskell javascript c c++">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -132,7 +132,10 @@
         <li>C</li>
         <li>Unix Shell Scripting</li>
         <li>PHP</li>
-        <li><strong>Web Technologies</strong>:JavaScript,JQuery,HTML,CSS</li>
+        <li>Haskell</li>
+        <li>Node.js</li>
+        <li><strong>Web Technologies</strong> : JavaScript,JQuery,HTML,CSS</li>
+        <li><strong>Web frameworks</strong> : Django, Web2Py, CodeIgniter</li>
       </ul>
 
       <!-- Example row of columns -->
